# graph

./: .gitignore  CMakeLists.txt
resources/: icon.pdn  qresource.qrc
src/: calc.hpp  graph.cpp  graph.hpp  highlightedlineedit.cpp  highlightedlineedit.hpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.hpp  styles.hpp  tintinglabel.cpp  tintinglabel.h  tintinglabel.hpp
src/include/: colordisplay.cpp  colordisplay.hpp  colorpicker.cpp  colorpicker.hpp  highlightedlineedit.cpp  highlightedlineedit.hpp  separator.cpp  separator.hpp  tintinglabel.cpp  tintinglabel.hpp
